Bugfix: frontpage content overflowed drawer menu

--- a/sass/_frontpage.scss
+++ b/sass/_frontpage.scss
@@ -16,6 +16,7 @@ $frontpage-tab-count: 3;
   &.menuActive {
 
     #frontpageContent {
+      overflow:hidden;
       -webkit-transform:translate3d(17em, 0, 0);
 
       .overlay {
